more mixamo animations

--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -240,7 +240,7 @@ AnimationCurveGroupingDelimiters="._/|\\"
 LastLevel=/Game/Maps/LandscapePractice
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
@@ -5236,7 +5236,7 @@ Common=False
 Favorites=True
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=MapCheck
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
