re-added CC0 Rogue

--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -243,13 +243,15 @@ LastLevel=/Game/Maps/LandscapePractice
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
@@ -265,6 +267,8 @@ RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
+OpenAssetsAtExit=/Game/Blueprints/Companion/Rogue/rogue_texture1.rogue_texture1
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
 OpenAssetsAtExit=/Game/Blueprints/Companion/BP_Companion.BP_Companion
 
 [DetailCategories]
@@ -3540,27 +3544,31 @@ SkinnedAsset=
 LODInfoUILayout=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Companion/BP_Companion
-MRUItem1=/Game/TopDown/Blueprints/Mage/ABP_Mage
-MRUItem2=/Game/TopDown/Blueprints/Mage/Mage_BlendSpace1D
-MRUItem3=/Game/TopDown/Blueprints/Mage/MageNoProps
-MRUItem4=/Game/TopDown/Blueprints/Mage/mage_texture1
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem6=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem7=/Game/Blueprints/BP_ThirdPersonCharacterCustom
-MRUItem8=/Game/Materials/Landscape/M_Landscape
-MRUItem9=/Game/Cursor/FX_Cursor
-MRUItem10=/Game/Cursor/M_Cursor
-MRUItem11=/Game/TopDown/Input/Actions/IA_SetDestination_Click
-MRUItem12=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem13=/Game/Materials/M_Glass
-MRUItem14=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02_TwoSided
-MRUItem15=/Game/Polyhaven/shrub_02_4k/Materials/MI_DisplayColor
-MRUItem16=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02
-MRUItem17=/Game/Polyhaven/namaqualand_boulder_04_4k/StaticMeshes/SM_namaqualand_boulder_04_LOD0
-MRUItem18=/Game/Polyhaven/namaqualand_boulder_03_4k/StaticMeshes/SM_namaqualand_boulder_03_LOD0
-MRUItem19=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem20=/Game/Polyhaven/flower_gazania_4k/StaticMeshes/SM_root
+MRUItem0=/Game/Blueprints/Companion/Rogue/ABP_Rogue
+MRUItem1=/Game/Blueprints/Companion/Rogue/Rogue_BlendSpace1D
+MRUItem2=/Game/Blueprints/Companion/Rogue/rogue_texture1
+MRUItem3=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem4=/Game/Blueprints/Companion/Rogue/RogueNoProps
+MRUItem5=/Game/Blueprints/Companion/BP_Companion
+MRUItem6=/Game/TopDown/Blueprints/Mage/ABP_Mage
+MRUItem7=/Game/TopDown/Blueprints/Mage/Mage_BlendSpace1D
+MRUItem8=/Game/TopDown/Blueprints/Mage/MageNoProps
+MRUItem9=/Game/TopDown/Blueprints/Mage/mage_texture1
+MRUItem10=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem11=/Game/Blueprints/BP_ThirdPersonCharacterCustom
+MRUItem12=/Game/Materials/Landscape/M_Landscape
+MRUItem13=/Game/Cursor/FX_Cursor
+MRUItem14=/Game/Cursor/M_Cursor
+MRUItem15=/Game/TopDown/Input/Actions/IA_SetDestination_Click
+MRUItem16=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem17=/Game/Materials/M_Glass
+MRUItem18=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02_TwoSided
+MRUItem19=/Game/Polyhaven/shrub_02_4k/Materials/MI_DisplayColor
+MRUItem20=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02
+MRUItem21=/Game/Polyhaven/namaqualand_boulder_04_4k/StaticMeshes/SM_namaqualand_boulder_04_LOD0
+MRUItem22=/Game/Polyhaven/namaqualand_boulder_03_4k/StaticMeshes/SM_namaqualand_boulder_03_LOD0
+MRUItem23=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem24=/Game/Polyhaven/flower_gazania_4k/StaticMeshes/SM_root
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimStarterPack/Hit_React_1.Hit_React_1=1
