setting up subtitle system

--- a/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/MacEditor/EditorPerProjectUserSettings.ini
@@ -238,17 +238,19 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [EditorStartup]
-LastLevel=/Game/Maps/LandscapePractice
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -271,10 +273,11 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=MaterialInstanceEditor
-RecentAssetEditors=StaticMeshEditor
 OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController
 OpenAssetsAtExit=/Game/Widgets/W_Hotbar.W_Hotbar
+OpenAssetsAtExit=/Game/Widgets/W_Text.W_Text
+OpenAssetsAtExit=/Game/Blueprints/Knights/BP_Knight.BP_Knight
+OpenAssetsAtExit=/Game/Widgets/Subtitle_Struct.Subtitle_Struct
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3223,6 +3226,7 @@ FloatingPawnMovement.Activation=True
 FloatingPawnMovement.Variable=True
 FloatingPawnMovement.Cooking=True
 InterpToMovementComponent.Behaviour=True
+Subtitle_Struct.None=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -3397,20 +3401,20 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/TopDown/Blueprints
+ContentBrowserTab2.SelectedPaths=/Game/Widgets
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSize=2
 ContentBrowserTab2.CurrentViewType=1
+ContentBrowserTab2.JumpMRU=/All/Game/Widgets
 ContentBrowserTab2.JumpMRU=/All/Game/TopDown/Blueprints
 ContentBrowserTab2.JumpMRU=/All/Game/TopDown
 ContentBrowserTab2.JumpMRU=/All/Game/ThirdPerson/Blueprints
 ContentBrowserTab2.JumpMRU=/All/Game/ThirdPerson
 ContentBrowserTab2.JumpMRU=/All/Game/Niagara
 ContentBrowserTab2.JumpMRU=/All/Game/Niagara/Widgets
-ContentBrowserTab2.JumpMRU=/All/Game/Widgets
 ContentBrowserTab2.JumpMRU=/All/Game
 ContentBrowserTab2.JumpMRU=/All/Game/TopDown/Input
 ContentBrowserTab2.JumpMRU=/All/Game/Blueprints/Companion/Rogue
@@ -3475,8 +3479,8 @@ Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 MaterialEditorInstanceConstant=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
@@ -3598,41 +3602,41 @@ SkinnedAsset=
 LODInfoUILayout=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 FloatingPawnMovement="\"Object.NavMovement.NavAgentProps\" "
-BP_TopDownController_C="\"Object.Actors to Ignore\" "
-PlayerController="\"Object.Actors to Ignore\" "
-Controller="\"Object.Actors to Ignore\" "
+BP_TopDownController_C=
+PlayerController=
+Controller=
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Widgets/W_Hotbar
-MRUItem2=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem3=/Game/TopDown/Input/IMC_Default
-MRUItem4=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem5=/Game/Widgets/W_Text
-MRUItem6=/Game/Blueprints/Companion/Rogue/Rogue_BlendSpace1D
-MRUItem7=/Game/Blueprints/Knights/BP_Knight
-MRUItem8=/Game/Blueprints/Knights/ABP_Knight
-MRUItem9=/Game/Blueprints/Knights/Knight_BlendSpace1D
-MRUItem10=/Game/Blueprints/Knights/knight_texture1
-MRUItem11=/Game/Blueprints/Companion/Rogue/ABP_Rogue
-MRUItem12=/Game/Blueprints/Companion/Rogue/rogue_texture1
-MRUItem13=/Game/Blueprints/Companion/Rogue/RogueNoProps
-MRUItem14=/Game/Blueprints/Companion/BP_Companion
-MRUItem15=/Game/TopDown/Blueprints/Mage/ABP_Mage
-MRUItem16=/Game/TopDown/Blueprints/Mage/Mage_BlendSpace1D
-MRUItem17=/Game/TopDown/Blueprints/Mage/MageNoProps
-MRUItem18=/Game/TopDown/Blueprints/Mage/mage_texture1
-MRUItem19=/Game/Blueprints/BP_ThirdPersonCharacterCustom
-MRUItem20=/Game/Materials/Landscape/M_Landscape
-MRUItem21=/Game/Cursor/FX_Cursor
-MRUItem22=/Game/Cursor/M_Cursor
-MRUItem23=/Game/TopDown/Input/Actions/IA_SetDestination_Click
-MRUItem24=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem25=/Game/Materials/M_Glass
-MRUItem26=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02_TwoSided
-MRUItem27=/Game/Polyhaven/shrub_02_4k/Materials/MI_DisplayColor
-MRUItem28=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02
-MRUItem29=/Game/Polyhaven/namaqualand_boulder_04_4k/StaticMeshes/SM_namaqualand_boulder_04_LOD0
+MRUItem0=/Game/Widgets/DT_Sub
+MRUItem1=/Game/Widgets/Subtitle_Struct
+MRUItem2=/Game/Blueprints/Knights/BP_Knight
+MRUItem3=/Game/Widgets/W_Text
+MRUItem4=/Game/Widgets/W_Hotbar
+MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem6=/Game/Widgets/Sub_DT_Knight
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/TopDown/Input/IMC_Default
+MRUItem9=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem10=/Game/Blueprints/Companion/Rogue/Rogue_BlendSpace1D
+MRUItem11=/Game/Blueprints/Knights/ABP_Knight
+MRUItem12=/Game/Blueprints/Knights/Knight_BlendSpace1D
+MRUItem13=/Game/Blueprints/Knights/knight_texture1
+MRUItem14=/Game/Blueprints/Companion/Rogue/ABP_Rogue
+MRUItem15=/Game/Blueprints/Companion/Rogue/rogue_texture1
+MRUItem16=/Game/Blueprints/Companion/Rogue/RogueNoProps
+MRUItem17=/Game/Blueprints/Companion/BP_Companion
+MRUItem18=/Game/TopDown/Blueprints/Mage/ABP_Mage
+MRUItem19=/Game/TopDown/Blueprints/Mage/Mage_BlendSpace1D
+MRUItem20=/Game/TopDown/Blueprints/Mage/MageNoProps
+MRUItem21=/Game/TopDown/Blueprints/Mage/mage_texture1
+MRUItem22=/Game/Blueprints/BP_ThirdPersonCharacterCustom
+MRUItem23=/Game/Materials/Landscape/M_Landscape
+MRUItem24=/Game/Cursor/FX_Cursor
+MRUItem25=/Game/Cursor/M_Cursor
+MRUItem26=/Game/TopDown/Input/Actions/IA_SetDestination_Click
+MRUItem27=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem28=/Game/Materials/M_Glass
+MRUItem29=/Game/Polyhaven/fern_02_4k/Materials/MI_fern_02_TwoSided
 
 [AssetEditorToolkitTabLocation]
 /Game/AnimStarterPack/Hit_React_1.Hit_React_1=1
@@ -3883,6 +3887,7 @@ MRUItem29=/Game/Polyhaven/namaqualand_boulder_04_4k/StaticMeshes/SM_namaqualand_
 /Game/Blueprints/Knights/BP_Knight.BP_Knight=0
 /Game/Widgets/W_Text.W_Text=0
 /Game/TopDown/Input/IMC_Default.IMC_Default=0
+/Game/Widgets/Subtitle_Struct.Subtitle_Struct=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -5449,7 +5454,7 @@ SkeletalMeshComponent=BP_Companion_C.Physics.ConstraintsGroup,BP_ThirdPersonChar
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 CapsuleComponent=BP_Companion_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacterCustom_C.TransformCommon.Transform,BP_ThirdPersonCharacterCustom_C.Materials.MaterialList,BP_ThirdPersonCharacterCustom_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.CharacterData,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.CharacterData,StaticMeshComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,CameraComponent.PostProcess.Lens
 BP_EnemySpawner_C=BP_Companion_C.Physics.ConstraintsGroup
-SceneComponent=BP_Companion_C.Physics.ConstraintsGroup,BP_ThirdPersonCharacterCustom_C.TransformCommon.Transform,BP_ThirdPersonCharacterCustom_C.Materials.MaterialList,BP_ThirdPersonCharacterCustom_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.CharacterData,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.CharacterData,StaticMeshComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,CameraComponent.PostProcess.Lens,Landscape.TransformCommon.Transform,Landscape.Collision.Collision
+SceneComponent=
 BP_EnemySpawnManager_C=BP_Companion_C.Physics.ConstraintsGroup
 BP_KillingFloor_C=BP_Companion_C.Physics.ConstraintsGroup
 BP_MovingPlatform_C=BP_Companion_C.Physics.ConstraintsGroup,Blueprint.Interfaces.Implemented Interfaces,PostProcessVolume.Lens.Lens,PropertyWrapper.DefaultValueCategory.CharacterData,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.CharacterData
